# computer_science_bundled

./: .gitignore  Global Variables.txt  folders.txt  main.code-workspace
ClientSoftware/: ClientSoftware.sln
CloudApplication/: package-lock.json  (+1 more)
MicroServices/: CMakeLists.txt
MicroServices/config/: config.json
MicroServices/config/rest_data/: web_service.config.json  web_service_methods.cpp
MicroServices/config/socket_data/: web_service.config.json
MicroServices/include/: Interconnect.hpp  InterfaceManager.hpp  MicroService.tpp  MicroServiceController.hpp  Service.hpp  SessionManager.hpp
MicroServices/include/Interfaces/: Rest.hpp  Socket.hpp
MicroServices/include/Utils/: Utils.hpp
MicroServices/lib/boost_1_72_0/bin.v2/standalone/msvc/msvc-14.2/: msvc-setup.bat
MicroServices/lib/boost_1_72_0/stage/lib/: libboost_atomic-vc142-mt-x32-1_72.lib  libboost_atomic-vc142-mt-x64-1_72.lib  libboost_chrono-vc142-mt-gd-x64-1_72.lib  libboost_chrono-vc142-mt-x64-1_72.lib  libboost_container-vc142-mt-x64-1_72.lib  libboost_context-vc142-mt-gd-x32-1_72.lib  libboost_context-vc142-mt-x32-1_72.lib  libboost_contract-vc142-mt-gd-x32-1_72.lib  libboost_coroutine-vc142-mt-gd-x32-1_72.lib  libboost_coroutine-vc142-mt-gd-x64-1_72.lib  libboost_coroutine-vc142-mt-x32-1_72.lib  libboost_date_time-vc142-mt-gd-x32-1_72.lib  libboost_date_time-vc142-mt-gd-x64-1_72.lib  libboost_exception-vc142-mt-gd-x32-1_72.lib  libboost_exception-vc142-mt-gd-x64-1_72.lib  libboost_exception-vc142-mt-x64-1_72.lib  libboost_fiber-vc142-mt-x32-1_72.lib  libboost_iostreams-vc142-mt-x64-1_72.lib  libboost_math_c99-vc142-mt-gd-x32-1_72.lib  libboost_math_c99-vc142-mt-gd-x64-1_72.lib  libboost_math_c99-vc142-mt-x32-1_72.lib  libboost_math_c99-vc142-mt-x64-1_72.lib  libboost_math_c99f-vc142-mt-gd-x32-1_72.lib  libboost_math_c99f-vc142-mt-x32-1_72.lib  libboost_math_c99f-vc142-mt-x64-1_72.lib  libboost_math_c99l-vc142-mt-gd-x64-1_72.lib  libboost_math_c99l-vc142-mt-x32-1_72.lib  libboost_math_c99l-vc142-mt-x64-1_72.lib  libboost_random-vc142-mt-gd-x64-1_72.lib  libboost_stacktrace_windbg-vc142-mt-gd-x32-1_72.lib  libboost_stacktrace_windbg-vc142-mt-gd-x64-1_72.lib  libboost_stacktrace_windbg-vc142-mt-x64-1_72.lib  libboost_stacktrace_windbg_cached-vc142-mt-gd-x64-1_72.lib  libboost_system-vc142-mt-gd-x32-1_72.lib  libboost_system-vc142-mt-gd-x64-1_72.lib  libboost_system-vc142-mt-x32-1_72.lib  libboost_thread-vc142-mt-gd-x32-1_72.lib  libboost_timer-vc142-mt-gd-x32-1_72.lib  libboost_timer-vc142-mt-x64-1_72.lib  libboost_type_erasure-vc142-mt-gd-x32-1_72.lib  (+2 more)
MicroServices/lib/websocketpp/: CMakeCache.txt
MicroServices/src/: InterfaceManager.cpp  Main.cpp  MicroService.cpp  MicroServiceController.cpp  Service.cpp  SessionManager.cpp
MicroServices/src/Interfaces/: Rest.cpp  Socket.cpp
MicroServices/src/Interfaces/Socket/: Actions.cpp  Routes.cpp  Socket.cpp  SocketActions.cpp  SocketRoutes.cpp
MicroServices/src/Services/: Interconnect.cpp  SoftwareService.cpp  WebService.cpp
MicroServices/src/Utils/: Utils.cpp
(+2165 files in other folders)
